--- a/owner/owner-client/src/styles.css
+++ b/owner/owner-client/src/styles.css
@@ -53,3 +53,30 @@ body {
   background-color: black;
   opacity: 0.8 !important;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: black; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--primary); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--accent); 
+}
+
+@media (max-width: 960px) {
+  ::-webkit-scrollbar {
+    width: 2px;
+  }
+}
